# fusionauth-rust-client

./: .gitignore  Cargo.toml  README.md  api_version.yaml  notify.bash  update.bash  update.sh
.github/workflows/: update_package.yaml
docs/: AccessToken.md  ActionData.md  ActionRequest.md  ActionResponse.md  Algorithm.md  ApiKey.md  ApiKeyMetaData.md  ApiKeyPermissions.md  ApiKeyRequest.md  ApiKeyResponse.md  AppleApplicationConfiguration.md  AppleIdentityProvider.md  Application.md  ApplicationAccessControlConfiguration.md  ApplicationEmailConfiguration.md  ApplicationExternalIdentifierConfiguration.md  ApplicationFormConfiguration.md  ApplicationMultiFactorConfiguration.md  ApplicationMultiFactorTrustPolicy.md  ApplicationOAuthScope.md  ApplicationOAuthScopeRequest.md  ApplicationOAuthScopeResponse.md  ApplicationPhoneConfiguration.md  ApplicationRegistrationDeletePolicy.md  ApplicationRequest.md  ApplicationResponse.md  ApplicationRole.md  ApplicationSearchCriteria.md  ApplicationSearchRequest.md  ApplicationSearchResponse.md  ApplicationUnverifiedConfiguration.md  ApplicationWebAuthnConfiguration.md  ApplicationWebAuthnWorkflowConfiguration.md  Attachment.md  AttestationConveyancePreference.md  AttestationType.md  AuditLog.md  AuditLogConfiguration.md  AuditLogCreateEvent.md  AuditLogExportRequest.md  (+590 more)
scripts/: get_openapi.bash  notify.bash  update.bash
src/apis/: configuration.rs  default_api.rs
src/models/: access_token.rs  action_data.rs  action_request.rs  action_response.rs  algorithm.rs  api_key.rs  api_key_meta_data.rs  api_key_permissions.rs  attachment.rs  (+621 more)
